--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -1,80 +1,139 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <meta charset="UTF-8" />
+        <title>Upload File</title>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Upload File</title>
+        <link rel="stylesheet" th:href="@{/styles.css}" />
+        <title>Upload</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Single:wght@100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <div id="box">
+            <div th:replace="fragments :: navbar"></div>
 
-    <link rel="stylesheet" th:href="@{/styles.css}">
-    <title>Upload</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Single:wght@100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+            <h1 th:text="#{app.info}">Placeholder</h1>
 
-</head>
-<body>
-<div id="box">
-<div th:replace="fragments :: navbar"></div>
+            <h2 th:text="#{upload.page.info}"></h2>
+            <div>
+                <span th:text="#{logged.message}"></span>
+                <span id="usernameSpan"></span>
+            </div>
+            <br />
+            <div>
+                <span th:text="#{token.info}"></span>
+                <span id="tokenMinutesLeft"></span>
+            </div>
+            <br />
+            <div>
+                <button id="logoutBtn" th:text="#{logout.button}">
+                    Logout
+                </button>
 
-    <h1 th:text="#{app.info}">Placeholder</h1>
+                <button id="refreshBtn" th:text="#{refresh.button}">
+                    refresh token
+                </button>
+            </div>
 
-    <h2 th:text="#{upload.page.info}"></h2>
-    <div>
-    <span th:text="#{logged.message}"></span>
-    <span id="usernameSpan"></span>
-    </div>
-<br>
-    <div>
-<span th:text="#{token.info}"></span>
-<span id="tokenMinutesLeft"></span>
+            <div id="uploadArea">
+                <label class="file-upload-btn">
+                    <span th:text="#{choose.file.msg}">Choose File</span>
+                    <input type="file" id="fileInput" hidden />
+                </label>
+
+                <button id="uploadBtn" th:text="#{upload.button}"></button>
+                <br />
+                <span
+                    id="filenameSpan"
+                    th:text="#{upload.filenotchosen}"
+                ></span>
+                <br /><br />
+            </div>
+
+            <span>
+                <button id="dirBackBtn"th:text="#{dir.goback}"></button>
+                <button id="createDirBtn" th:text="#{createDir.button}"></button>
+
+            </span>
+
+            <p id="curDir"></p>
+            
+
+            <p id="message"></p>
+
+            <div id="tableDiv">
+              <table id="filesTable">
+                  <thead>
+                      <tr>
+                          <th>Id</th>
+                          <th th:text="#{table.type}"></th>
+                          <th th:text="#{table.filename}">Filename</th>
+                          <th th:text="#{table.size}">Size</th>
+                          <th th:text="#{table.actions}">Download</th>
+                          <th th:text="#{table.createdAt}">Size</th>
+                      </tr>
+                  </thead>
+                  <tbody></tbody>
+              </table>
+            </div>
         </div>
-<br>
-    <div>
-<button id="logoutBtn"
-        th:text="#{logout.button}"
->Logout
 
-</button>
+       <!-- <button id="openRename">Rename</button> -->
 
-<button id="refreshBtn" th:text="#{refresh.button}"> refresh token</button>
+<div id="renameModal" class="modal hidden">
+  <div class="modal-content">
+    <h3 id="renameTitle">Rename</h3>
+    <input type="text" id="renameInput" placeholder="text" />
+    <div class="actions">
+      <button id="cancelRename" th:text="#{modal.cancel}"  >Cancel</button>
+      <button id="confirmRename" th:text="#{modal.confirm}" >OK</button>
     </div>
-
-
-<div id="uploadArea">
-<label class="file-upload-btn">
-    <span th:text="#{choose.file.msg}">Choose File</span>
-    <input type="file" id="fileInput" hidden>
-</label>
-
-    <button id="uploadBtn"
-            th:text="#{upload.button}"
-    >
-    </button>
-    <br>
-<span id="filenameSpan" th:text="#{upload.filenotchosen}" ></span>
-<br><br>
-
-
-
+  </div>
 </div>
 
-    <p id="message"></p>
-    <table id="filesTable">
-        <thead>
-        <tr>
-            <th th:text="#{table.filename}">Filename</th>
-            <th th:text="#{table.size}">Size</th>
-            <th th:text="#{table.actions}">Download</th>
-        </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
 
+<div id="deleteModal" class="modal hidden">
+  <div class="modal-content">
+    <h3 id="deleteTitle"></h3>
+    <div class="actions">
+      <button id="cancelDelete" th:text="#{modal.cancel}" >Cancel</button>
+      <button id="confirmDelete"  th:text="#{modal.confirm}" >OK</button>
+    </div>
+  </div>
 </div>
-<script th:type="module"  th:src="@{/upload.js}"></script>
+ 
+
+<div id="logoutModal" class="modal hidden">
+  <div class="modal-content">
+    <h3 id="logoutTitle"></h3>
+    <div class="actions">
+      <button id="cancelLogout"  th:text="#{modal.cancel}" >Cancel</button>
+      <button id="confirmLogout" th:text="#{modal.confirm}"  >OK</button>
+    </div>
+  </div>
+</div>
 
 
-</body>
+<div id="createDirModal" class="modal hidden">
+  <div class="modal-content">
+    <h3 id="createDirTitle"></h3>
+    <input type="text" id="createDirInput" placeholder="text" />
+    <div class="actions">
+      <button id="cancelCreateDir" th:text="#{modal.cancel}"></button>
+      <button id="confirmCreateDir" th:text="#{modal.confirm}"></button>
+    </div>
+  </div>
+</div>
+ 
+ 
+
+
+
+        <script th:type="module" th:src="@{/upload.js}"></script>
+    </body>
 </html>
